// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FoodList Coorectly 1`] = `
<div
  className="content-container"
>
  <div
    className="input-group"
  >
    <div
      className="input-group__item input-group__item--range"
    >
      <div>
        <input
          className="text-input"
          disabled={true}
          id="textInput"
          placeholder="Search by Amount"
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          className="text-input"
          max="2000"
          min="0"
          onChange={[Function]}
          step="10"
          type="range"
          value={2000}
        />
      </div>
    </div>
    <div
      className="input-group__item"
    >
      <input
        className="text-input"
        onChange={[Function]}
        placeholder="Search by Name"
        type="text"
        value=""
      />
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          All
        </option>
        <option
          value="regular"
        >
          Regular
        </option>
        <option
          value="full"
        >
          Full
        </option>
      </select>
    </div>
    <div
      className="input-group__item"
    >
      <button
        className="button button--categoryModal"
        onClick={[Function]}
      >
        Search by Food Category
      </button>
    </div>
  </div>
  <CategoryModal
    handleCategory={[Function]}
    handleCloseModal={[Function]}
    modalIsOpen={false}
  />
</div>
`;

exports[`should render FoodList with alternate food filter 1`] = `
<div
  className="content-container"
>
  <div
    className="input-group"
  >
    <div
      className="input-group__item input-group__item--range"
    >
      <div>
        <input
          className="text-input"
          disabled={true}
          id="textInput"
          placeholder="Search by Amount"
          type="text"
          value=""
        />
      </div>
      <div>
        <input
          className="text-input"
          max="2000"
          min="0"
          onChange={[Function]}
          step="10"
          type="range"
          value={2000}
        />
      </div>
    </div>
    <div
      className="input-group__item"
    >
      <input
        className="text-input"
        onChange={[Function]}
        placeholder="Search by Name"
        type="text"
        value="ch"
      />
    </div>
    <div
      className="input-group__item"
    >
      <select
        className="select"
        onChange={[Function]}
        value="reg"
      >
        <option
          value=""
        >
          All
        </option>
        <option
          value="regular"
        >
          Regular
        </option>
        <option
          value="full"
        >
          Full
        </option>
      </select>
    </div>
    <div
      className="input-group__item"
    >
      <button
        className="button button--categoryModal"
        onClick={[Function]}
      >
        fri
      </button>
    </div>
  </div>
  <CategoryModal
    handleCategory={[Function]}
    handleCloseModal={[Function]}
    modalIsOpen={false}
  />
</div>
`;
